# NewHope

./: CMakeLists.txt  Makefile  README.md
Application/: App.cmake  main.cpp
Configuration/: GNUArmEmbeddedToolChain.cmake  GNUWindowsToolChain.cmake
Sources/: CMakeLists.txt  MyClass.cpp  MyClass.hpp
Sources/test/: MyClassUnitTests.cpp
TestFramework/googlemock/msvc/2008/: gmock.vcproj  gmock_main.vcproj  gmock_test.vcproj
